# ResumeGenie

./: .gitignore  Deployment.txt  README.md  main.py  main_dashboard.py  pyproject.toml  requirements.txt
notebooks/: AI_Career_Coach (Colab).ipynb  Cover_Letter_Generator (Colab).ipynb  Resume_Checker (Colab).ipynb  Resume_Scorer (Colab).ipynb
src/: ai_career_coach.py  cover_letter_generator.py  resume_checker.py  resume_scorer.py
