[project]
name = "resumegenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-xai>=1.2.2",
    "pypdf>=6.7.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
]
